@@ -1,34 +1,31 @@
 package net.swofty.type.skyblockgeneric.gui.inventories.sbmenu.profiles;
 
 import lombok.SneakyThrows;
-import net.kyori.adventure.text.Component;
 import net.minestom.server.inventory.InventoryType;
 import net.minestom.server.item.Material;
 import net.swofty.commons.StringUtility;
 import net.swofty.commons.skyblock.SkyBlockPlayerProfiles;
+import net.swofty.commons.text.Text;
 import net.swofty.type.generic.data.datapoints.DatapointBoolean;
 import net.swofty.type.generic.data.datapoints.DatapointDouble;
 import net.swofty.type.generic.data.datapoints.DatapointLong;
 import net.swofty.type.generic.data.datapoints.DatapointString;
 import net.swofty.type.generic.data.mongodb.ProfilesDatabase;
-import net.swofty.type.generic.gui.inventory.ItemStackCreator;
-import net.swofty.type.generic.gui.inventory.TranslatableItemStackCreator;
+import net.swofty.type.generic.gui.inventory.ItemStacks;
 import net.swofty.type.generic.gui.v2.Components;
 import net.swofty.type.generic.gui.v2.DefaultState;
 import net.swofty.type.generic.gui.v2.StatelessView;
 import net.swofty.type.generic.gui.v2.ViewConfiguration;
 import net.swofty.type.generic.gui.v2.ViewLayout;
 import net.swofty.type.generic.gui.v2.context.ViewContext;
-import net.swofty.type.generic.i18n.I18n;
 import net.swofty.type.skyblockgeneric.data.SkyBlockDataHandler;
 import net.swofty.type.skyblockgeneric.data.monogdb.CoopDatabase;
 import net.swofty.type.skyblockgeneric.item.crafting.SkyBlockRecipe;
+import net.swofty.type.skyblockgeneric.user.ProfileMode;
 import net.swofty.type.skyblockgeneric.user.SkyBlockPlayer;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Locale;
 import java.util.UUID;
 
 public class GUIProfileManagement extends StatelessView {
@@ -55,8 +52,8 @@ public class GUIProfileManagement extends StatelessView {
 
             if (profileIds.size() <= profileCount) {
                 // Empty profile slot
-                layout.slot(slot, (s, c) -> TranslatableItemStackCreator.getStack("gui_sbmenu.profiles.empty_slot", Material.OAK_BUTTON, 1,
-                                "gui_sbmenu.profiles.empty_slot.lore"),
+                layout.slot(slot, (s, c) -> ItemStacks.item(Material.OAK_BUTTON, 1, Text.key("gui_sbmenu.profiles.empty_slot"),
+                                Text.keyLines("gui_sbmenu.profiles.empty_slot.lore")),
                         (click, c) -> c.player().openView(new GUIProfileSelectMode()));
                 continue;
             }
@@ -81,67 +78,66 @@ public class GUIProfileManagement extends StatelessView {
             if (selected) {
                 layout.slot(slot, (s, c) -> {
                     SkyBlockPlayer p = (SkyBlockPlayer) c.player();
-                    Locale l = p.getLocale();
-                    List<String> lore = new ArrayList<>(Arrays.asList(I18n.string("gui_sbmenu.profiles.selected.subtitle", l), " "));
+                    List<Text> lore = new ArrayList<>(List.of(Text.key("gui_sbmenu.profiles.selected.subtitle"), Text.literal(" ")));
                     updateLore(profileId, finalDataHandler, lore);
-                    lore.add(" ");
-                    lore.add(I18n.string("gui_sbmenu.profiles.selected.playing", l));
+                    lore.add(Text.literal(" "));
+                    lore.add(Text.key("gui_sbmenu.profiles.selected.playing"));
 
                     String profileName = finalDataHandler.get(SkyBlockDataHandler.Data.PROFILE_NAME, DatapointString.class).getValue();
-                    return ItemStackCreator.getStack(I18n.string("gui_sbmenu.profiles.selected", l, Component.text(profileName)), Material.EMERALD_BLOCK, 1, lore);
+                    return ItemStacks.item(Material.EMERALD_BLOCK, 1, Text.key("gui_sbmenu.profiles.selected", profileName), lore);
                 }, (click, c) -> {
                     SkyBlockPlayer p = (SkyBlockPlayer) c.player();
-                    Locale l = p.getLocale();
                     String profileName = finalDataHandler.get(SkyBlockDataHandler.Data.PROFILE_NAME, DatapointString.class).getValue();
-                    p.sendMessage(I18n.t("gui_sbmenu.profiles.msg.playing_on", Component.text(profileName)));
-                    p.sendMessage(I18n.t("gui_sbmenu.profiles.msg.switch_first"));
+                    p.sendMessage(Text.key("gui_sbmenu.profiles.msg.playing_on", profileName));
+                    p.sendMessage(Text.key("gui_sbmenu.profiles.msg.switch_first"));
                 });
             } else {
                 layout.slot(slot, (s, c) -> {
                     SkyBlockPlayer p = (SkyBlockPlayer) c.player();
-                    Locale l = p.getLocale();
-                    List<String> lore = new ArrayList<>(Arrays.asList(I18n.string("gui_sbmenu.profiles.unselected.subtitle", l), " "));
+                    List<Text> lore = new ArrayList<>(List.of(Text.key("gui_sbmenu.profiles.unselected.subtitle"), Text.literal(" ")));
                     updateLore(profileId, finalDataHandler, lore);
-                    lore.add(" ");
-                    lore.add(I18n.string("gui_sbmenu.profiles.unselected.click", l));
+                    lore.add(Text.literal(" "));
+                    lore.add(Text.key("gui_sbmenu.profiles.unselected.click"));
 
                     String profileName = finalDataHandler.get(SkyBlockDataHandler.Data.PROFILE_NAME, DatapointString.class).getValue();
-                    return ItemStackCreator.getStack(I18n.string("gui_sbmenu.profiles.unselected", l, Component.text(profileName)), Material.GRASS_BLOCK, 1, lore);
+                    return ItemStacks.item(Material.GRASS_BLOCK, 1, Text.key("gui_sbmenu.profiles.unselected", profileName), lore);
                 }, (click, c) -> c.player().openView(new GUIProfileSelect(profileId)));
             }
         }
     }
 
-    public static List<String> updateLore(UUID profileUuid, SkyBlockDataHandler handler, List<String> lore) {
-        net.swofty.type.skyblockgeneric.user.ProfileMode mode = net.swofty.type.skyblockgeneric.user.ProfileMode.fromStored(
+    public static List<Text> updateLore(UUID profileUuid, SkyBlockDataHandler handler, List<Text> lore) {
+        ProfileMode mode = ProfileMode.fromStored(
                 handler.get(SkyBlockDataHandler.Data.PROFILE_MODE, DatapointString.class).getValue());
-        if (mode != net.swofty.type.skyblockgeneric.user.ProfileMode.CLASSIC) {
-            lore.add("§7Mode: " + mode.getDisplayName());
-            lore.add(" ");
+        if (mode != ProfileMode.CLASSIC) {
+            lore.add(Text.of("<7>Mode: ").append(mode.getDisplayName()));
+            lore.add(Text.literal(" "));
         }
         if (handler.get(SkyBlockDataHandler.Data.IS_COOP, DatapointBoolean.class).getValue()) {
             CoopDatabase.Coop coop = CoopDatabase.getFromMemberProfile(profileUuid);
             if (coop != null) {
-                lore.add("§bCo-op with §e" + coop.members().size() + " §bplayers:");
-                coop.members().forEach(member -> lore.add(" §7- §7" + SkyBlockPlayer.getDisplayName(member)));
-                lore.add(" ");
+                lore.add(Text.of("<b>Co-op with <e>{} <b>players:", coop.members().size()));
+                coop.members().forEach(member -> lore.add(Text.of(" <7>- ").append(SkyBlockPlayer.getDisplayName(member))));
+                lore.add(Text.literal(" "));
             }
         }
 
-        SkyBlockRecipe.getMissionDisplay(lore, handler.getUuid());
-        lore.add(" ");
+        List<String> missionLore = new ArrayList<>();
+        SkyBlockRecipe.getMissionDisplay(missionLore, handler.getUuid());
+        missionLore.forEach(line -> lore.add(Text.parse(line)));
+        lore.add(Text.literal(" "));
 
-        lore.add(I18n.string("gui_sbmenu.profiles.no_skills"));
-        lore.add(" ");
+        lore.add(Text.key("gui_sbmenu.profiles.no_skills"));
+        lore.add(Text.literal(" "));
 
         Double coins = handler.get(SkyBlockDataHandler.Data.COINS, DatapointDouble.class).getValue();
         if (coins > 0) {
-            lore.add(I18n.string("gui_sbmenu.profiles.purse_coins", Component.text(String.valueOf(coins))));
+            lore.add(Text.key("gui_sbmenu.profiles.purse_coins", coins));
         }
 
         Long createdTime = handler.get(SkyBlockDataHandler.Data.CREATED, DatapointLong.class).getValue();
         String age = StringUtility.profileAge(System.currentTimeMillis() - createdTime);
-        lore.add(I18n.string("gui_sbmenu.profiles.age", Component.text(age)));
+        lore.add(Text.key("gui_sbmenu.profiles.age", age));
 
         return lore;
     }
